--- a/miniproject/miniproject.html
+++ b/miniproject/miniproject.html
@@ -10,9 +10,9 @@
         <h1>Đội Ngũ Bác Sĩ Nha Khoa</h1>
 
         <div class="menu">
-            <a href="trangchu.link">Trang chủ</a> | <a href="#">Giới thiệu</a> |
-            <a href="bacsi.link">Bác sĩ</a> |
-            <a href="lienhe.link">Liên hệ</a>
+            <a href="trangchu">Trang chủ</a> | <a href="#">Giới thiệu</a> |
+            <a href="bacsi">Bác sĩ</a> |
+            <a href="lienhe">Liên hệ</a>
         </div>
 
         <br>
@@ -51,4 +51,5 @@
             <p>Hotline: 0900 111 222</p>
         </div>
 </body>
+
 </html>
