--- a/miniproject/miniproject.html
+++ b/miniproject/miniproject.html
@@ -10,9 +10,9 @@
         <h1>Đội Ngũ Bác Sĩ Nha Khoa</h1>
 
         <div class="menu">
-            <a href="trangchu">Trang chủ</a> | <a href="#">Giới thiệu</a> |
-            <a href="bacsi">Bác sĩ</a> |
-            <a href="lienhe">Liên hệ</a>
+            <a href="#">Trang chủ</a> | <a href="#">Giới thiệu</a> |
+            <a href="#">Bác sĩ</a> |
+            <a href="#">Liên hệ</a>
         </div>
 
         <br>
@@ -53,3 +53,4 @@
 </body>
 
 </html>
+
