--- a/miniproject/miniproject.html
+++ b/miniproject/miniproject.html
@@ -10,7 +10,8 @@
         <h1>Đội Ngũ Bác Sĩ Nha Khoa</h1>
 
         <div class="menu">
-            <a href="#">Trang chủ</a> | <a href="#">Giới thiệu</a> |
+            <a href="#">Trang chủ</a> | 
+            <a href="#">Giới thiệu</a> |
             <a href="#">Bác sĩ</a> |
             <a href="#">Liên hệ</a>
         </div>
@@ -53,4 +54,5 @@
 </body>
 
 </html>
+
 
